fixed align

--- a/src/app/landing.scss
+++ b/src/app/landing.scss
@@ -50,7 +50,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center bottom;
+    background-position: center top;
     display: flex;
     align-items: center;
     justify-content: center;
